fixed drand and drop bug

--- a/templates/user_dashboard/dashboard.html
+++ b/templates/user_dashboard/dashboard.html
@@ -18,6 +18,17 @@
               <section id="container">
                 <article class="dropBox active-row">
 
+                  <div id="empty-api" class="empty-api"
+                    style="display:none; flex-direction:column; justify-content:center; align-items:center; width: 100%">
+                    <div className="icon">
+                      <span class="material-icons" style="font-size: 65px; color: lightgrey">cloud_off</span>
+                    </div>
+
+                    <div className="text" style="text-align:center;">
+                      <h4 style="color: lightgrey">There's nothing here</h4>
+                      <p style="color: lightgrey;">Drag from available APIs or use the add button to add new API</p>
+                    </div>
+                  </div>
                   
                   
                   <!-- Single box -->
