--- a/static/assets/sass/dashboard/_settings.scss
+++ b/static/assets/sass/dashboard/_settings.scss
@@ -37,6 +37,7 @@
         li {
           margin: 9px 0;
           color: darken($color: $tetiary-color, $amount: 45);
+          cursor: pointer;
         }
 
         li.active {
@@ -57,7 +58,7 @@
           .profile__image {
             width: 100px;
             height: 100px;
-            border-radius: 50%;
+            border-radius: 100%;
             background-color: #6E8B41;
             overflow: hidden;
             display: flex;
@@ -122,6 +123,67 @@
         }
       }
       
+    }
+  }
+
+
+  @media (max-width: $breakpoint-tablet) {
+
+
+    .main__content__heading {
+  
+      div:nth-child(1) {
+        min-width: 0;
+      }
+  
+      div:nth-child(2) {
+        width: 100%;
+      }
+    }
+
+    .main__content { 
+      flex-direction: column;
+
+      &__menu {
+        width: 100%;
+        justify-content: center;
+
+        ul {
+          display: flex;
+          // flex-direction: column;
+          justify-content: center;
+
+          li {
+            display: flex;
+            justify-content: center;
+            margin: 3% 1%;
+          }
+        }
+      }
+
+      &__tabs {
+        width: 100%;
+
+        #profile-tab {
+          .profile__details {
+            
+            
+            div.btn-container {
+    
+              button.custom-btn {
+                padding: .3rem ;
+              }
+    
+              p {
+                margin: 0;
+                // margin-left: 2%;
+              }
+
+            } 
+          }
+        }
+
+      }
     }
   }
 }
