added change password tab amd resposnsiveness

--- a/templates/user_dashboard/dash_base.html
+++ b/templates/user_dashboard/dash_base.html
@@ -24,7 +24,7 @@
     <!-- dashboard side bar -->
     <div class="sidebar">
       <div class="sidebar__logo">
-        <a href="{% url 'index' %}"><img src="{% static 'img/logo-alt.svg' %}" alt=""></a>
+        <a href="/dashboard"><img src="{% static 'img/logo-alt.svg' %}" alt=""></a>
       </div>
 
       <div class="sidebar__section">
@@ -176,6 +176,7 @@
 <script src="{% static 'js/dashboard_sidebar.js' %}"></script>
 <script src="{% static 'js/dashboard.js' %}"></script>
 <script src="{% static 'js/configure_api.js' %}"></script>
+<script src="{% static 'js/acct-settings.js' %}"></script>
 </body>
 
 </html>
