--- a/static/assets/sass/dashboard/_index.scss
+++ b/static/assets/sass/dashboard/_index.scss
@@ -4,7 +4,7 @@
 #dashboard {
   .dashboard__main {
     height: 88.2vh;
-    padding: 2% 5% !important;
+    padding: 2% 5% 15% !important;
     overflow-y: auto;
 
     .dashboard__title {
@@ -34,6 +34,12 @@
       }
     }
   }
+
+  // @media (max-width: $breakpoint-phone) {
+  //   .dashboard__main {
+  //     height: 80.2vh;
+  //   }
+  // }
 }
 
 
