removed hardcoded data

--- a/static/assets/sass/dashboard/_settings.scss
+++ b/static/assets/sass/dashboard/_settings.scss
@@ -91,6 +91,7 @@
               p {
                 margin: 0;
                 margin-left: 10px;
+                cursor: pointer;
               }
             } 
           }
