--- a/templates/user_dashboard/acct_settings.html
+++ b/templates/user_dashboard/acct_settings.html
@@ -51,12 +51,12 @@
   
                 <label>
                   <b>Username</b>
-                  <input type="text" placeholder="Kadet">
+                  <input type="text" placeholder="{{user.username}}">
                 </label>
   
                 <label>
                   <b>Email</b>
-                  <input type="text" placeholder="techkadet@gmail.com">
+                  <input type="text" placeholder="{{user.email}}">
                 </label>
   
                 <button class="primary-btn custom-btn">Save Changes</button>
