--- a/templates/user_dashboard/dash_base.html
+++ b/templates/user_dashboard/dash_base.html
@@ -143,9 +143,12 @@
                   </button>
                 </div>
                 <div class="modal-body">
-
                   <div class="notification-content">
-
+                    <div class="empty-notifications">
+                      <span class="material-icons">notifications_paused</span>
+                      <h3>Nothing to see here</h3>
+                      <p>You do not have any new notifications. Check back later when you have some activity</p>
+                    </div>
                   </div>
 
                 </div>
