--- a/static/assets/sass/pages/_hire_consultant.scss
+++ b/static/assets/sass/pages/_hire_consultant.scss
@@ -6,18 +6,17 @@
         display: grid;
         &__banner{
             text-align: center;
-          
+            padding: 0px;
 
             h1{
                 font-weight: 800;
-                font-size: 45px;
+                font-size: 72px;
                 line-height: 88px;
                 margin-bottom: 30px;
             }
             p{
-                font-size: 18px;
+                font-size: 20px;
                 line-height: 30px;
-
             }
         }
         &__services{
@@ -29,14 +28,13 @@
 
                 h4{
                     font-weight: 800;
-                    font-size: 30px;
+                    font-size: 36px;
                     line-height: 44px;
                     margin-bottom: 20px;
                 }
                 p{
-                    font-size: 18px;
+                    font-size: 20px;
                     line-height: 30px;
-                
                 }
             }
             &__content{
@@ -53,14 +51,13 @@
                     position: relative;
 
                     h5{
-                        font-size: 25px;
+                        font-size: 18px;
                         line-height: 24px;
                         margin-bottom: 20px;
                     }
                     p{
-                        font-size: 17px;
-                        line-height: 20px;
-                        
+                        font-size: 14px;
+                        line-height: 16px;
                     }
                     button{
                         background: #F4F4F4;
@@ -69,8 +66,8 @@
                         width: 130px;
                         height: 50px;
                         font-size: 15px;
-                        // position: absolute;
-                        // bottom: 50px;
+                        position: absolute;
+                        bottom: 50px;
                         &:hover{
                             border: 1px solid $primary-color;
                             box-shadow: inset 0 0 2px 0px $theme-color;
@@ -98,13 +95,13 @@
 
                     label{
                         display: block;
-                        font-size: 17px !important;
+                        font-size: 24px !important;
                         line-height: 28px !important;
                         color: #121215 !important;
+                        font-family: Gilroy ☞ !important;
                         margin-bottom: .5rem !important;
                     }
                     input{
-                        padding-left:0.3em;
                         width: 400px;
                         height: 48px;
                         border: 1px solid #979797;
@@ -117,8 +114,8 @@
                     padding: 10px 0px;
                     overflow: auto;
                     p{
-                        
-                        font-size: 17px;
+                        font-family: Gilroy ☞;
+                        font-size: 24px;
                         line-height: 28px;
                         color: #121215;
                         display: inline-block;
@@ -131,7 +128,7 @@
                         float: left;
 
                         div{
-                           
+                            font-family: Gilroy ☞;
                             font-size: 24px;
                             color: #121215;
                             margin-top: -3px;
@@ -144,7 +141,7 @@
                                 display: inline-flex;
                                 width: 170px !important;
                                 margin-left: 10px !important;
-                                font-size: 17px !important;
+                                font-size: 24px !important;
                                 margin-bottom: .5rem !important;
                             }
                         }
@@ -161,9 +158,10 @@
                     }
                 }
                 button{
-                    width: 300px;
-                    height: 60px;
+                    width: 400px;
+                    height: 70px;
                     background: #121215;
+                    font-family: Gilroy ☞;
                     font-size: 24px;
                     color: $secondary-color;
                     cursor: pointer;
@@ -245,7 +243,7 @@ $breakpoint-miniphone: 350px;
             &__form{
                 form{
                     .input_container{
-                        margin: 20px auto;
+                        margin: 10px auto;
                         float: none;
 
                         input{
@@ -277,6 +275,18 @@ $breakpoint-miniphone: 350px;
         }
     }
 }
+@media (max-width:767px){
+    #hire_consultant{
+        .block{
+            &__banner{
+                h1{
+                    font-size: 60px;
+                    line-height: 70px;
+                }
+            }
+        }
+    }
+}
 @media (max-width: $breakpoint-phone) {
     #hire_consultant{
 
@@ -286,8 +296,8 @@ $breakpoint-miniphone: 350px;
 
             &__banner{
                 h1{
-                    font-size: 50px;
-                    line-height: 60px;
+                    font-size: 39px;
+                    line-height: 55px;
                 }
                 p{
                     font-size: 20px;
@@ -307,13 +317,11 @@ $breakpoint-miniphone: 350px;
 
                     &__box{
                         width: 300px;
-                        // height: 280px;
+                        height: 280px;
                         padding: 40px 15px;
-                        margin: 30px auto;
+                        margin: 10px auto;
                         float: none;
-
                         button{
-                          
                             bottom: 20px;
                         }
                     }
@@ -335,17 +343,11 @@ $breakpoint-miniphone: 350px;
                         }
                     }
                     .select_container{
-                        margin-top:2em;
                         padding: 10px 0px;
                         width: 100%;
-                        p{
-                           
-                            font-size: 20px !important;
-                        }
 
                         div{
                             div{
-                                
                                 label{
                                     width: 170px !important;
                                     font-size: 20px !important;
