--- a/templates/user_dashboard/dash_base.html
+++ b/templates/user_dashboard/dash_base.html
@@ -75,14 +75,17 @@
                       <label for="project name"></label>
                       <input type="text"
                         class="form-control" name="project name" id="" aria-describedby="helpId" placeholder="Enter project name">
-                      <small id="helpId" class="form-text text-muted"></small>
+                      <small id="helpId" class="form-text text-muted" style="margin-bottom: 15px;"></small>
+
+                      <button type="submit" class="btn btn-primary">Add Project</button>
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                     </div>
 
                   </div>
-                  <div class="modal-footer">
+                  <!-- <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-primary">Add Project</button>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
