--- a/templates/user_dashboard/dashboard.html
+++ b/templates/user_dashboard/dashboard.html
@@ -21,7 +21,7 @@
                   
                   
                   <!-- Single box -->
-                  {% for context in object_list %}
+                  {% for context in active_api %}
                   <div class="dragBox active-box">
                     <div class="api__box">
                       <div class="api__box__shadow">
