--- a/templates/user_dashboard/dash_base.html
+++ b/templates/user_dashboard/dash_base.html
@@ -73,7 +73,7 @@
                   </div>
                   <div class="modal-body">
 
-                    <form action="">
+                    <form action="" method="POST"></form>>
 
                       
                     <div class="form-group">
@@ -82,7 +82,7 @@
                         class="form-control" name="project name" id="" aria-describedby="helpId" placeholder="Enter project name">
                       <small id="helpId" class="form-text text-muted" style="margin-bottom: 15px;"></small>
 
-                      <a href="#"><button type="submit" class="btn btn-primary">Add Project</button></a>
+                      <a href="{% url 'dashboard:addProject' %}"><button type="submit" class="btn btn-primary">Add Project</button></a>
                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                     </div>
 
