--- a/templates/user_dashboard/dash_base.html
+++ b/templates/user_dashboard/dash_base.html
@@ -33,7 +33,7 @@
           <ul class="sidebar__section__header__list">
             {% for project in user.projects.all %}
               <li>
-                <a href="{% url 'dashboard:addProject' %}">{{ project.name }}</a>
+                <a href="{% url 'dashboard:dashboard' project.id %}">{{ project.name }}</a>
                 <!-- <div class="pretty p-icon">
                   <input type="checkbox" />
                   <div class="state">
@@ -81,8 +81,7 @@
                       <input type="text"
                         class="form-control" name="project name" id="" aria-describedby="helpId" placeholder="Enter project name">
                       <small id="helpId" class="form-text text-muted" style="margin-bottom: 15px;"></small>
-
-                      <a href="{% url 'dashboard:addProject' %}"><button type="submit" class="btn btn-primary">Add Project</button></a>
+                      <a href=""><button type="submit" class="btn btn-primary">Add Project</button></a>
                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                     </div>
 
@@ -122,7 +121,7 @@
                 <a href="{% url 'dashboard:settings' %}">Account settings</a>
               </li>
               <li>
-                <a href="{% url 'dashboard:logout' %}">Sign out</a>
+                <a href="{% url 'accounts:logout' %}">Sign out</a>
               </li>
             </ul>
           </div>
