--- a/templates/user_dashboard/dash_base.html
+++ b/templates/user_dashboard/dash_base.html
@@ -73,13 +73,13 @@
                   </div>
                   <div class="modal-body">
 
-                    <form action="" method="POST"></form>>
-
+                    <form action="{% url 'dashboard:addProject' %}" method="POST"></form>>
+                    {% csrf_token %}
                       
                     <div class="form-group">
                       <label for="project name"></label>
                       <input type="text"
-                        class="form-control" name="project name" id="" aria-describedby="helpId" placeholder="Enter project name">
+                        class="form-control" name="project_name" id="" aria-describedby="helpId" placeholder="Enter project name">
                       <small id="helpId" class="form-text text-muted" style="margin-bottom: 15px;"></small>
                       <a href=""><button type="submit" class="btn btn-primary">Add Project</button></a>
                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
