--- a/templates/user_dashboard/dash_base.html
+++ b/templates/user_dashboard/dash_base.html
@@ -73,7 +73,7 @@
                   </div>
                   <div class="modal-body">
 
-                    <form action="{% url 'dashboard:addProject' %}" method="POST"></form>>
+                    <form action="{% url 'dashboard:addProject' %}" method="POST">
                     {% csrf_token %}
                       
                     <div class="form-group">
